--- a/src/app/components/events-detail/events-detail.component.css
+++ b/src/app/components/events-detail/events-detail.component.css
@@ -1,6 +1,6 @@
 
 .header {
-    height: 250px;
+    height: 400px;
 }
 
 .left-header {
@@ -99,3 +99,16 @@ p.month {
 }
 
 
+:host {
+    display: block;
+}
+
+.uploader-wrapper {
+    position: relative;
+    width: 100vw;
+    height: 80vh;
+    padding-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
