--- a/src/app/components/events-creation/events-creation.component.scss
+++ b/src/app/components/events-creation/events-creation.component.scss
@@ -49,3 +49,159 @@ $actions-height: 52px;
     margin: $margin;
   }
 }
+
+.cdk-overlay-pane {
+  width: available !important;
+  height: available !important;
+  max-width: 100% !important;
+}
+
+.mat-dialog-container {
+  max-width: available !important;
+  max-height: available !important;
+  resize: both;
+}
+
+
+.uploadfilecontainer {
+  //background-image: url("../../assets/cloud-2044823_960_720.png");
+  background-repeat: no-repeat;
+  background-size: 100px;
+  background-position: center;
+  height: 200px;
+  width: 80%;
+  margin: 20px auto;
+  border: 2px dashed #1C8ADB;
+  border-radius: 10px;
+}
+
+.uploadfilecontainer:hover {
+  cursor: pointer;
+  background-color: #9ecbec !important;
+  opacity: 0.8;
+}
+
+.files-list {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 10px auto;
+  background: #ffffff;
+  border: 1px dashed;
+  border-radius: 12px;
+  padding: 5px;
+  color: #1c8adb;
+}
+
+.files-list .delete-file {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.files-list .delete-file img {
+  width: 30px;
+}
+
+.image-container {
+  width: 650px;
+  height: 300px;
+  margin: 0 auto;
+  display: flex;
+  border: 1px solid blue;
+  justify-content: center;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+}
+
+:host {
+  display: block;
+}
+
+.uploader-wrapper {
+  position: relative;
+  width: 850px;
+  height: 350px;
+  padding-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+
+.dropzone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-weight: 200;
+  height: 300px;
+  border: 2px dashed #f16624;
+  border-radius: 5px;
+  background: white;
+  margin: 10px 0;
+
+  &.hovering {
+    border: 2px solid #f16624;
+    color: #dadada !important;
+  }
+
+  .file-label {
+    font-size: 1.2em;
+  }
+}
+
+progress::-webkit-progress-value {
+  transition: width 0.1s ease;
+}
+
+.uploadfilecontainer {
+  //background-image: url("../../icons/add.svg");
+  //background-image;
+  background-repeat: no-repeat;
+  background-size: 100px;
+  background-position: center;
+  height: 200px;
+  width: 80%;
+  margin: 20px auto;
+  border: 2px dashed #1C8ADB;
+  border-radius: 10px;
+}
+
+.uploadfilecontainer:hover {
+  cursor: pointer;
+  background-color: #9ecbec !important;
+  opacity: 0.8;
+}
+
+.files-list {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin: 10px auto;
+  background: #ffffff;
+  border: 1px dashed;
+  border-radius: 12px;
+  padding: 5px;
+  color: #1c8adb;
+}
+
+.files-list .delete-file {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.files-list .delete-file img {
+  width: 30px;
+}
+
+.control-buttons {
+  display: flex;
+  width: 650px;
+  margin: 5px auto 0;
+  justify-content: center
+}
