--- a/src/app/components/events-detail/events-detail.component.html
+++ b/src/app/components/events-detail/events-detail.component.html
@@ -18,8 +18,12 @@
 		
 		
 		</div>
-		<div class="col-5">
-			image
+		<div class="col-8">
+			<img
+					class="profile-user-img img-responsive img-circle"
+					[src]=image height="400px" width="max"
+					alt="User profile picture"
+			/>
 		</div>
 	</div>
 	
@@ -140,5 +144,7 @@
 </div>
 
 
-
-
+<div class="uploader-wrapper">
+	<ngx-awesome-uploader [adapter]="adapter" [enableCropper]="true" (uploadSuccess)="uploadSuccess($event)">
+	</ngx-awesome-uploader>
+</div>
