--- a/src/app/components/image-upload/image-upload.component.html
+++ b/src/app/components/image-upload/image-upload.component.html
@@ -1,61 +1,17 @@
-<div class="columns">
-	<div class="column is-one-third">
-		<div class="field">
-			<div class="file has-name is-primary is-fullwidth">
-				<label class="file-label">
-					<input
-							class="file-input"
-							type="file"
-							name="file"
-							#fileInput
-							(change)="onChange(fileInput.files[0])"
-					/>
-					<span class="file-cta">
-            <span class="file-icon">
-              <fa-icon [icon]="['fas', 'upload']"></fa-icon>
-            </span>
-            <span class="file-label">
-              Choose a file…
-            </span>
-          </span>
-					<span class="file-name">
-            {{ fileName }}
-          </span>
-				</label>
-			</div>
-		</div>
-		
-		<article class="message" *ngIf="infoMessage">
-			<div class="message-body">
-				{{ infoMessage }}
-			</div>
-		</article>
-		
-		<div class="field" *ngIf="!infoMessage">
-			<div class="control">
-				<progress
-						class="progress is-primary"
-						[attr.value]="progress"
-						max="100"
-				></progress>
-			</div>
-		</div>
-		
-		<div class="field">
-			<div class="control">
-				<button
-						class="button is-primary"
-						(click)="onUpload()"
-						[attr.disabled]="isUploading ? '' : null"
-				>
-					Upload
-				</button>
-			</div>
-		</div>
-	</div>
-	<div class="column">
-		<figure class="image is-128x128">
-			<img [src]="imageUrl"/>
-		</figure>
-	</div>
-</div>
+<mat-dialog-content>
+	<image-cropper
+			[imageChangedEvent]="imageChangedEvent"
+			[maintainAspectRatio]="true"
+			[autoCrop]="false"
+			[aspectRatio]="2"
+			format="png"
+			(imageCropped)="imageCropped($event)"
+			(imageLoaded)="imageLoaded()"
+			(cropperReady)="cropperReady()"
+			(loadImageFailed)="loadImageFailed()"
+	></image-cropper>  <!-- Image Cropper -->
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+	<button mat-button mat-dialog-close>Cancel</button>
+	<button (click)="crop()" mat-button [mat-dialog-close]="close" cdkFocusInitial>Install</button>
+</mat-dialog-actions>
