--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -45,7 +45,7 @@
 </nav>-->
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-	<a class="navbar-brand" href="#">WebSiteName</a>
+	<a class="navbar-brand" href="#">Evetz</a>
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb"
 	        aria-expanded="true">
 		<span class="navbar-toggler-icon"></span>
@@ -56,15 +56,17 @@
 				<a class="nav-link" routerLink="/events">Home</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link">new event</a>
+				<a class="nav-link">help</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" routerLink="/newEvent">Page 2</a>
+				<a class="nav-link" routerLink="/newEvent">new event</a>
 			</li>
 			<form class="form-inline my-2 my-lg-0">
-				<input #myInput (keyup.enter)="doSearch(myInput.value)" class="form-control mr-sm-2" type="search"
+				<input #searchInput (keyup.enter)="doSearch(searchInput.value)" class="form-control mr-sm-2"
+				       type="search"
 				       placeholder="Search" aria-label="Search">
-				<button (click)="doSearch(myInput.value)" class="btn btn-outline-success my-2 my-sm-0" type="submit">
+				<button (click)="doSearch(searchInput.value)" class="btn btn-outline-success my-2 my-sm-0"
+				        type="submit">
 					Search
 				</button>
 			</form>
