fixing the event creation authorization

--- a/src/app/components/events-detail/events-detail.component.html
+++ b/src/app/components/events-detail/events-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="event" class="container">
 	<div class="row header">
 		<div class="col-4 left-header">
 			<div class=" entry-date">
