--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -87,7 +87,7 @@
 					Sign in
 				</button>
 			</div>
-			<img src="assets/svgs/ticket-monochrome.svg" class="image" alt=""/>
+			<img src="assets/svgs/register.svg" class="image" alt=""/>
 		</div>
 	</div>
 </div>
