--- a/src/app/components/events-list/events-list.component.html
+++ b/src/app/components/events-list/events-list.component.html
@@ -31,7 +31,7 @@
 			</div>
 		</div>
 	</div>
-	<div *ngIf="events?.length==0" class="alert alert-warning col-md-12" role="alert">not products found</div>
+	<div *ngIf="events?.length==0" class="alert alert-warning col-md-12" role="alert">no events found</div>
 </div>
 
 
