--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,3 +1,10 @@
-<app-events-intro></app-events-intro>
-<app-events-category-menu></app-events-category-menu>
-<app-events-list></app-events-list>
+<div class="container justify-content-center">
+	<app-events-intro></app-events-intro>
+	<app-events-category-menu></app-events-category-menu>
+	<div class="center">
+		<app-events-list></app-events-list>
+	
+	</div>
+</div>
+
+
