--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -44,7 +44,7 @@
 	</div>
 </nav>-->
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+<nav class="navbar navbar-expand-md navbar-color navbar-dark sticky-top">
 	<a class="navbar-brand" href="#">Evetz</a>
 	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb"
 	        aria-expanded="true">
@@ -55,21 +55,8 @@
 			<li class="nav-item active">
 				<a class="nav-link" routerLink="/events">Home</a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link">help</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" routerLink="/newEvent">new event</a>
-			</li>
-			<form class="form-inline my-2 my-lg-0">
-				<input #searchInput (keyup.enter)="doSearch(searchInput.value)" class="form-control mr-sm-2"
-				       type="search"
-				       placeholder="Search" aria-label="Search">
-				<button (click)="doSearch(searchInput.value)" class="btn btn-outline-success my-2 my-sm-0"
-				        type="submit">
-					Search
-				</button>
-			</form>
+		
+		
 		</ul>
 		<ul class="nav navbar-nav ml-auto">
 			<li *ngIf="authenticated">
@@ -79,7 +66,18 @@
 				</button>
 			</li>
 		</ul>
-		
+		<form>
+			<div class="container h-100">
+				<div class="d-flex justify-content-center h-100">
+					<div class="searchbar">
+						<input #searchInput (keyup.enter)="doSearch(searchInput.value)" class="search_input"
+						       type="text" name="" placeholder="Search...">
+						<a (click)="doSearch(searchInput.value)" class="search_icon"><i
+								class="fas fa-search"></i></a>
+					</div>
+				</div>
+			</div>
+		</form>
 		<ul class="nav navbar-nav ml-auto">
 			
 			<li class="nav-item">
