--- a/src/app/components/events-intro/events-intro.component.html
+++ b/src/app/components/events-intro/events-intro.component.html
@@ -1,6 +1,13 @@
-<div class="jumbotron jumbotron-fluid mt-5">
-    <div class="container">
-        <h1 class="display-4">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
-    </div>
+<div class="jumbotron  text-center">
+	<div class=" intro">
+		
+		<div class="text-block">
+			<h2>You will find the events you need</h2>
+		</div>
+		<div class="action">
+			<button routerLink="/search" mat-raised-button color="primary" type="button" class="btn btn-outline-light">
+				browse events
+			</button>
+		</div>
+	</div>
 </div>
