--- a/src/app/components/events-search/events-search.component.css
+++ b/src/app/components/events-search/events-search.component.css
@@ -75,11 +75,11 @@
 }
 
 .blog-card {
+    border-radius: 15px 50px;
     height: 180px;
     width: 100%;
     max-width: 850px;
     margin: auto;
-    border-radius: 0;
     background: white;
     box-shadow: 0 10px 50px rgba(183, 128, 128, 0.3);
     margin-bottom: 10px
@@ -98,7 +98,7 @@
 .inner-part .img {
     height: 180px;
     width: 360px;
-
+    border-radius: 15px 0 0 0;
     flex-shrink: 0;
     overflow: hidden;
     /*
@@ -164,15 +164,7 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+.img-1 {
+    height: 100%;
+    width: 100%;
+}
