--- a/src/app/components/events-search/events-search.component.html
+++ b/src/app/components/events-search/events-search.component.html
@@ -81,42 +81,43 @@
 		
 		</div>
 	</form>
-	<div class="row main" *ngIf="events">
+	<div class="col main" *ngIf="events">
 		
-		<div *ngFor="let event of events">
+		<div *ngFor="let event of events,index as i">
 			
-			
-			<div class="blog-card">
-				
-				
-				<div class="inner-part">
-					<label class="img">
-						<img class="img-1" src="https://picsum.photos/360/220">
-					</label>
-					<div class="content ">
-						<div class="date-info ">
-							<div class="header-text ml-3 mt-2">
-								<mat-icon class="mr-1">date_range</mat-icon>
-								{{event.startOfEvent}}
-								<mat-icon class="mr-1 ml-3">access_time</mat-icon>
-								{{event.startTime}}
-							</div>
-						</div>
-						
-						<a routerLink="/events/{{event.id}}" class="title ml-3" role="presentation">
-							{{event.name}}
-						</a>
-						<span>{{event.organizer}}</span>
-						<div class="location-info ml-3 mb-2">
-							<mat-icon>location_on</mat-icon>
-							{{event.location.city}}      {{event.location.country}}
-						
-						</div>
+			<div class="row">
+				<div class="blog-card">
 					
+					
+					<div class="inner-part">
+						<label class="img">
+							{{setCurrentIndex(event.id)}}
+							<img class="img-1" [src]=image>
+						</label>
+						<div class="content ">
+							<div class="date-info ">
+								<div class="header-text ml-3 mt-2">
+									<mat-icon class="mr-1">date_range</mat-icon>
+									{{event.startOfEvent}}
+									<mat-icon class="mr-1 ml-3">access_time</mat-icon>
+									{{event.startTime}}
+								</div>
+							</div>
+							
+							<a routerLink="/events/{{event.id}}" class="title ml-3" role="presentation">
+								{{event.name}}
+							</a>
+							<span>{{event.organizer}}</span>
+							<div class="location-info ml-3 mb-2">
+								<mat-icon>location_on</mat-icon>
+								{{event.location.city}}      {{event.location.country}}
+							
+							</div>
+						
+						</div>
 					</div>
+				
 				</div>
-			
-			
 			</div>
 		
 		
@@ -124,5 +125,6 @@
 	</div>
 
 </div>
+
 
 
