--- a/src/app/components/events-list/events-list.component.css
+++ b/src/app/components/events-list/events-list.component.css
@@ -39,6 +39,7 @@ h4 {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     background-size: cover;
+    border-bottom: 1px solid #e2dada;
 }
 
 .card-image img {
