--- a/src/app/components/events-search/events-search.component.html
+++ b/src/app/components/events-search/events-search.component.html
@@ -85,7 +85,7 @@
 		
 		<div *ngFor="let event of events,index as i">
 			
-			<div class="row">
+			<div class="row mb-3">
 				<div class="blog-card">
 					
 					
