--- a/src/app/components/events-creation/events-creation.component.html
+++ b/src/app/components/events-creation/events-creation.component.html
@@ -22,11 +22,13 @@
 					<h1>Basic Information</h1>
 					<p></p>
 					<div>
-						<mat-form-field class="col-5" color="accent" appearance="outline">
+						<mat-form-field class="col-5" appearance="outline">
 							<mat-label> Event Name</mat-label>
 							
 							<input matInput placeholder="Placeholder" formControlName="name">
-						
+							<mat-error *ngIf="generalInfo.get('basicInfo.name').hasError('required')">
+								<strong> This field is required</strong>
+							</mat-error>
 						</mat-form-field>
 					</div>
 					
@@ -35,6 +37,9 @@
 							<mat-label>Organizer</mat-label>
 							
 							<input matInput placeholder="Placeholder" formControlName="organizer">
+							<mat-error *ngIf="generalInfo.get('basicInfo.organizer').hasError('required')">
+								<strong> This field is required</strong>
+							</mat-error>
 						</mat-form-field>
 					</div>
 					
@@ -50,6 +55,9 @@
 									{{eventCat}}
 								</mat-option>
 							</mat-select>
+							<mat-error *ngIf="generalInfo.get('basicInfo.category').hasError('required')">
+								<strong> This field is required</strong>
+							</mat-error>
 						</mat-form-field>
 					</div>
 					
@@ -58,7 +66,14 @@
 						<mat-form-field class="col-5" appearance="outline">
 							<mat-label>Online URL</mat-label>
 							<input matInput placeholder="Placeholder" formControlName="onlineUrl">
+							<mat-error *ngIf="generalInfo.get('basicInfo.onlineUrl').hasError('required')">
+								<strong> This field is required</strong>
+							</mat-error>
+							<mat-error *ngIf="generalInfo.get('basicInfo.onlineUrl').hasError('onlineUrl')">
+								<strong>This is not a valid URl</strong>
+							</mat-error>
 						</mat-form-field>
+					
 					</div>
 				</div>
 				
@@ -71,7 +86,9 @@
 					<mat-form-field class="col-5" appearance="outline">
 						<mat-label>Address</mat-label>
 						<input matInput placeholder="Placeholder" formControlName="address">
-					
+						<mat-error *ngIf="generalInfo.get('addressInfo.address').hasError('required')">
+							<strong> This field is required</strong>
+						</mat-error>
 					</mat-form-field>
 					
 					<mat-form-field class="col-5" appearance="outline">
@@ -85,22 +102,34 @@
 					<mat-form-field class="col-3" appearance="outline">
 						<mat-label>City</mat-label>
 						<input matInput placeholder="Placeholder" formControlName="city">
+						<mat-error *ngIf="generalInfo.get('addressInfo.city').hasError('required')">
+							<strong> This field is required</strong>
+						</mat-error>
 					</mat-form-field>
 					
 					<mat-form-field class="col-3" appearance="outline">
 						<mat-label>Region</mat-label>
 						<input matInput placeholder="Placeholder" formControlName="region">
+						<mat-error *ngIf="generalInfo.get('addressInfo.region').hasError('required')">
+							<strong> This field is required</strong>
+						</mat-error>
 					</mat-form-field>
 					
 					<mat-form-field class="col-3" appearance="outline">
 						<mat-label>Zip Code</mat-label>
 						<input matInput placeholder="Placeholder" formControlName="zipCode">
+						<mat-error *ngIf="generalInfo.get('addressInfo.zipCode').hasError('required')">
+							<strong> This field is required</strong>
+						</mat-error>
 					</mat-form-field>
 					
 					<div>
 						<mat-form-field class="col-4" appearance="outline">
 							<mat-label>Country</mat-label>
 							<input matInput formControlName="country">
+							<mat-error *ngIf="generalInfo.get('addressInfo.country').hasError('required')">
+								<strong> This field is required</strong>
+							</mat-error>
 						
 						</mat-form-field>
 					</div>
@@ -117,10 +146,12 @@
 					<div class="row " style="margin-left:0">
 						<mat-form-field class="col-4" appearance="outline">
 							<mat-label>Start of the event</mat-label>
-							<input matInput [matDatepicker]="picker" formControlName="startOfEvent"
-							>
+							<input matInput [matDatepicker]="picker" formControlName="startOfEvent">
 							<mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
 							<mat-datepicker #picker></mat-datepicker>
+							<mat-error *ngIf="generalInfo.get('dateInfo.startOfEvent').hasError('required')">
+								<strong> This field is required</strong>
+							</mat-error>
 						</mat-form-field>
 						
 						<div class="col-md-6">
@@ -129,11 +160,16 @@
 								<input #start matInput [ngxTimepicker]="startTime" [format]="24"
 								
 								       formControlName="startTime" required/>
+								<mat-error *ngIf="generalInfo.get('dateInfo.startTime').hasError('required')">
+									<strong> This field is required</strong>
+								
+								</mat-error>
 								<button mat-button matSuffix mat-icon-button type="button">
 									<mat-icon class="i-time" (click)="startTime.open()">access_time</mat-icon>
 								</button>
 							</mat-form-field>
 							<ngx-material-timepicker appendToInput="start" #startTime></ngx-material-timepicker>
+						
 						</div>
 					
 					
@@ -143,6 +179,9 @@
 						<mat-form-field class="col-4" appearance="outline">
 							<mat-label>End of the event</mat-label>
 							<input formControlName="endOfEvent" matInput [matDatepicker]="picker2">
+							<mat-error *ngIf="generalInfo.get('dateInfo.endOfEvent').hasError('required')">
+								This field is <strong>required</strong>
+							</mat-error>
 							<mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
 							<mat-datepicker #picker2></mat-datepicker>
 						</mat-form-field>
@@ -152,6 +191,9 @@
 								<mat-label>{{ 'end time' }}</mat-label>
 								<input #end matInput [ngxTimepicker]="endTime" [format]="24"
 								       formControlName="endTime" required/>
+								<mat-error *ngIf="generalInfo.get('dateInfo.endTime').hasError('required')">
+									This field is <strong>required</strong>
+								</mat-error>
 								<button mat-button matSuffix mat-icon-button type="button">
 									<mat-icon class="i-time" (click)="endTime.open()">access_time</mat-icon>
 								</button>
@@ -163,8 +205,7 @@
 				</div>
 				
 				
-				<div>
-					<button mat-stroked-button matStepperPrevious>Back</button>
+				<div class="mt-4">
 					<button mat-stroked-button matStepperNext>Next</button>
 				</div>
 			</form>
@@ -172,9 +213,9 @@
 		
 		
 		<!--date-->
-		<mat-step [stepControl]="sessionForm">
+		<mat-step [stepControl]="complementInfo">
 			<ng-template matStepLabel>Complementary infos</ng-template>
-			<form [formGroup]="complementInfo" novalidate>
+			<form [formGroup]="complementInfo">
 				
 				<!--
 								<app-image-upload></app-image-upload>
@@ -192,7 +233,7 @@
 				<div *ngIf="!image2" class=" dropzone uploadfilecontainer" (click)="fileInput.click()" dropzone
 				     (drop)="fileChangeEvent($event)">
 					<h3>Choose an image</h3>
-					<p>file no more than 2mb</p>
+					<p>File no more than 2mb</p>
 					<input hidden type="file" #fileInput (change)="fileChangeEvent($event)">
 				</div>
 				
@@ -200,7 +241,6 @@
 				<div *ngIf="image2">
 					<div class="image-container">
 						<img [src]="image2"/>
-					
 					</div>
 					<div class="control-buttons">
 						<button (click)="removeImage()" mat-raised-button color="primary" mat-button>
@@ -212,26 +252,11 @@
 							resize
 						</button>
 					</div>
-				
+					<
 				</div>
 				
 				
-				<!--<mat-form-field class="col-8" appearance="outline">
-					<mat-label>Description</mat-label>
-					<textarea formControlName="imageUrl" matInput placeholder="Placeholder"></textarea>
-				</mat-form-field>-->
-				
-				<!--<div id="file" class="form-group">
-					<label for="file">File upload</label>
-					<input type="file" class="form-control" accept="image/*" (change)="fileChangeEvent($event)"
-					       style="height:100%">
-				</div>
-				
-				<div *ngIf="image2" class="image-container">
-					<img [src]="image2"/>
-				
-				</div>    -->            <!--
-								<app-image-cropper [src]="image2"></app-image-cropper>
+				<!--
 				-->
 				
 				
@@ -239,14 +264,16 @@
 				<p>please provide a brief description of the event</p>
 				<mat-form-field class="col-8" appearance="outline">
 					<mat-label>Description</mat-label>
-					<textarea formControlName="description" matInput placeholder="Placeholder"
-					></textarea>
+					<textarea formControlName="description" matInput placeholder="Placeholder"></textarea>
+					<mat-error *ngIf="complementInfo.get('description').hasError('required')">
+						This field is <strong>required</strong>
+					</mat-error>
 				</mat-form-field>
 				
 				
-				<div>
+				<div class="mt-4">
 					<button mat-stroked-button matStepperPrevious>Back</button>
-					<button mat-stroked-button (click)="stepper.reset()">Reset</button>
+					<button mat-stroked-button matStepperNext>Next</button>
 				</div>
 			
 			</form>
@@ -263,11 +290,11 @@
 				<h1>Sessions</h1>
 				<p>Indicate any session contained within the event</p>
 				
-				
+				<!--
 				<div class="example-action-buttons">
 					<button mat-button (click)="accordion.openAll()">Expand All</button>
 					<button mat-button (click)="accordion.closeAll()">Collapse All</button>
-				</div>
+				</div>-->
 				
 				<div class="mb-4">
 					<div formArrayName="sessions">
@@ -290,10 +317,12 @@
 									
 									<mat-form-field class="col-5" appearance="outline">
 										<mat-label> Session Name</mat-label>
-										<label>
-											<input formControlName="name" matInput
-											       placeholder="Placeholder">
-										</label>
+										
+										<input formControlName="name" matInput
+										       placeholder="Placeholder">
+										<mat-error *ngIf="session.get('name').hasError('required')">
+											This field is <strong>required</strong>
+										</mat-error>
 									</mat-form-field>
 								
 								</div>
@@ -304,6 +333,9 @@
 											<input formControlName="presenter" matInput
 											       placeholder="Placeholder">
 										</label>
+										<mat-error *ngIf="session.get('presenter').hasError('required')">
+											This field is <strong>required</strong>
+										</mat-error>
 									</mat-form-field>
 								</div>
 								<div>
@@ -316,66 +348,14 @@
 												{{sessionCat}}
 											</mat-option>
 										</mat-select>
+										<mat-error *ngIf="session.get('level').hasError('required')">
+											This field is <strong>required</strong>
+										</mat-error>
 									</mat-form-field>
 								</div>
 								
 								<!--
-								<mde-popover [mdePopoverArrowColor]="none" [mdePopoverOffsetX]="-235"
-								             [mdePopoverOffsetY]="15"
-								             [mdePopoverArrowOffsetX]="0" #appPopover="mdePopover"
-								             [mdePopoverOverlapTrigger]="false"
-								             [mdePopoverCloseOnClick]="false">
-									<mat-card style="width: 280px; height: 120px">
-										<mat-card-content style="justify-content: center">
-											<timepicker #timepicker formControlName="timeL"
-											            [showMeridian]="false"></timepicker>
-										</mat-card-content>
-										<mat-card-actions align="center">
-										
-										
-										</mat-card-actions>
-									</mat-card>
-								
-								</mde-popover>
-								
-								<mat-form-field class="col-5" appearance="outline">
-									<mat-label> Duration</mat-label>
-									<label>
-										<input matInput readonly
-										       [value]="session.get('timeL').value | date:'HH:mm' "
-										/>
-									</label>
-									<button mat-button matSuffix mat-icon-button type="button"
-									        [mdePopoverTriggerFor]="appPopover"
-									        mdePopoverTriggerOn="click">
-										<mat-icon class="i-time">
-											access_time
-										</mat-icon>
-									</button>
-								</mat-form-field>
-								
-								<igx-time-picker formControlName="timestamp" #picker [value]="today" format="HH:mm"
-								                 mode="dropdown">
-									<ng-template igxTimePickerTemplate let-openDialog="openDialog" let-value="value"
-									             let-displayTime="displayTime">
-										<igx-input-group>
-											<input #dropDownTarget igxInput [value]="displayTime"
-											       (blur)="onBlur(dropDownTarget.value, value, picker)"/>
-											<igx-suffix>
-												<igx-icon (click)="openDialog(dropDownTarget)">access_time</igx-icon>
-											</igx-suffix>
-											<igx-hint>{{value}}</igx-hint>
-										</igx-input-group>
-									</ng-template>
-									<ng-template igxTimePickerActions>
-										<div class="action-buttons">
-											<button igxButton="flat" (click)="picker.cancelButtonClick()">cancel
-											</button>
-											<button igxButton="flat" (click)="picker.okButtonClick()">ok</button>
-											<button igxButton="flat" (click)="selectNow(picker)">now</button>
-										</div>
-									</ng-template>
-								</igx-time-picker>-->
+								-->
 								
 								
 								<div>
@@ -383,29 +363,33 @@
 										<mat-label>Description</mat-label>
 										<textarea matInput placeholder="Placeholder"
 										          formControlName="description"></textarea>
+										<mat-error *ngIf="session.get('name').hasError('required')">
+											This field is <strong>required</strong>
+										</mat-error>
 									</mat-form-field>
 								
 								
 								</div>
 								
-								
-								<button color="success" mat-raised-button type="button" (click)="togglePanel(mep)"
-								        mat-button>
-									<mat-icon>save</mat-icon>
-									Save
-								</button>
-								<button color="warn" mat-raised-button type="button" (click)="removeSession(i)"
-								        mat-button>
-									<mat-icon>remove</mat-icon>
-									remove
-								</button>
+								<div class="mt-3">
+									<button color="success" mat-raised-button type="button" (click)="togglePanel(mep)"
+									        mat-button>
+										<mat-icon>save</mat-icon>
+										Save
+									</button>
+									<button color="warn" mat-raised-button type="button" (click)="removeSession(i)"
+									        mat-button>
+										<mat-icon>remove</mat-icon>
+										remove
+									</button>
+								</div>
 							
 							
 							</mat-expansion-panel>
-							<button mat-stroked-button matStepperPrevious>Back</button>
 						
 						</mat-accordion>
 						
+						<button mat-stroked-button matStepperPrevious>Back</button>
 						
 						<div class="example-button-container">
 							<button class="button-add" type="button" (click)="addSession()" mat-fab color="accent"
@@ -417,9 +401,15 @@
 					
 					</div>
 				</div>
-				<button mat-flat-button color="primary" (click)="submitForm()" type="submit">
-					submit
-				</button>
+				<div class="row mt-5 submit-bt">
+					<button class="sss" mat-flat-button color="primary" [disabled]="!sessionForm.valid"
+					        (click)="submitForm()"
+					        type="submit">
+						submit
+					</button>
+				</div>
+			
+			
 			</form>
 		
 		</mat-step>
