--- a/src/app/components/events-detail/events-detail.component.css
+++ b/src/app/components/events-detail/events-detail.component.css
@@ -1,7 +1,7 @@
 .main-body {
     max-width: 100%;
     background: #e8e1e1;
-    min-height: 95.5vh;
+    min-height: 94vh;
     display: flex;
     justify-content: center;
 }
@@ -147,6 +147,10 @@ p.month {
 img {
     width: 100%;
     height: 100%;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #dfd6d6;
     border-top-right-radius: 15px;
+}
+
+.mat-icon {
+    font-size: 40px;
 }
