--- a/src/app/components/events-search/events-search.component.css
+++ b/src/app/components/events-search/events-search.component.css
@@ -1,5 +1,5 @@
 .search-container {
-    box-shadow: 1px 2px 3px rgba(4, 0, 0, 0.1);
+    /* box-shadow: 1px 2px 3px rgba(4, 0, 0, 0.1);*/
 
 }
 
@@ -75,14 +75,13 @@
 }
 
 .blog-card {
-    border-radius: 15px 50px;
+    border-radius: 15px 15px;
     height: 180px;
     width: 100%;
     max-width: 850px;
-    margin: auto;
     background: white;
-    box-shadow: 0 10px 50px rgba(183, 128, 128, 0.3);
-    margin-bottom: 10px
+    box-shadow: 0 5px 5px rgb(0, 0, 0);
+    margin: auto auto 10px;
 }
 
 
@@ -98,13 +97,13 @@
 .inner-part .img {
     height: 180px;
     width: 360px;
-    border-radius: 15px 0 0 0;
+    border-radius: 15px 0 0 15px;
     flex-shrink: 0;
     overflow: hidden;
     /*
     border-radius: 20px;
     */
-    box-shadow: 2px 3px 15px rgba(252, 56, 56, .1);
+
     margin-bottom: 0;
 }
 
