--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -28,25 +28,16 @@ body, html {
     border: 0;
     outline: 0;
     background: none;
-    width: 0;
-    caret-color: transparent;
+    width: 450px;
+    caret-color: red;
+    padding: 0 10px;
     line-height: 40px;
     transition: width 0.4s linear;
 }
 
-.searchbar:hover > .search_input {
-    padding: 0 10px;
-    width: 450px;
-    caret-color: red;
-    transition: width 0.4s linear;
-}
-
-.searchbar:hover > .search_icon {
+.searchbar .search_icon {
     background: white;
     color: #e74c3c;
-}
-
-.search_icon {
     height: 40px;
     width: 40px;
     float: right;
@@ -54,6 +45,7 @@ body, html {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    color: white;
     text-decoration: none;
 }
+
+
