--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -66,7 +66,7 @@
 				</button>
 			</li>
 		</ul>
-		<form>
+		<section>
 			<div class="container h-100">
 				<div class="d-flex justify-content-center h-100">
 					<div class="searchbar">
@@ -77,7 +77,7 @@
 					</div>
 				</div>
 			</div>
-		</form>
+		</section>
 		<ul class="nav navbar-nav ml-auto">
 			
 			<li class="nav-item">
